Update Store Information Controller