@@ -103,7 +103,11 @@ public class StoreInformationController {
     @GetMapping("/public/get-store-information")
     public ResponseEntity<?> getStoreInformation(HttpServletRequest request) {
         List<StoreInformation> storeInformations = storeInformationRepository.findAll();
-        StoreInformation storeInformation = storeInformations.getFirst();
+        if (storeInformations.isEmpty()) {
+            ResponseObject responseObject = new ResponseObject("Vui lòng tạo thông tin cửa hàng");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(responseObject);
+        }
+        StoreInformation storeInformation = storeInformations.get(0);
         if (storeInformation != null) {
             ResponseObject responseObject = new ResponseObject("Đã lấy thông tin cửa hàng thành công", storeInformation);
             return ResponseEntity.ok(responseObject);
